@@ -251,11 +251,7 @@ it."
     (buffer-string)))
 
 (defun buffer-visible-p (buffer-name)
-  (find nil
-        (mapcar
-         #'(lambda (win) (buffer-name (window-buffer win)))
-         (window-list))
-        :if #'(lambda(buf)(string= buf buffer-name))))
+  (if (get-buffer-window buffer-name) t nil))
 
 ;; Misc
 
